<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toprest_background">

    <TextView
        android:id="@+id/title"
        style="@style/SignUpScreenTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/signup_screen_title_margin_horizontal"
        android:layout_marginTop="@dimen/signup_screen_title_margin_top"
        android:gravity="center_horizontal"
        android:text="@string/registerpassword_set_up_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.coinme.formfieldlib.FormFieldView
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/signup_screen_field_margin_horizontal"
        android:layout_marginTop="@dimen/registerpassword_password_margin_top"
        android:elevation="@dimen/elevation_8"
        android:hint="@string/registerpassword_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/password_error_message"
        style="@style/SignUpScreenErrorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/registeremail_email_error_margin_horizontal"
        android:layout_marginTop="@dimen/registerpassword_password_error_margin_top"
        android:text="@string/registerpassword_password_error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:visibility="visible" />

    <com.coinme.formfieldlib.FormFieldView
        android:id="@+id/repeat_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/signup_screen_field_margin_horizontal"
        android:layout_marginTop="@dimen/registerpassword_repeat_password_margin_top"
        android:elevation="@dimen/elevation_8"
        android:hint="@string/registerpassword_repeat_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_error_message" />

    <TextView
        android:id="@+id/repeat_password_error_message"
        style="@style/SignUpScreenErrorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/registerpassword_repeat_password_error_margin_horizontal"
        android:layout_marginTop="@dimen/registerpassword_repeat_password_error_margin_top"
        android:text="@string/registerpassword_repeat_password_error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeat_password"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/create_account_error_message"
        style="@style/SignUpScreenErrorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/registerpassword_account_creation_error_margin_horizontal"
        android:layout_marginTop="@dimen/registerpassword_account_creation_error_margin_top"
        android:text="@string/registerpassword_account_creation_error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_error_message"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
